Prepare to deploy very initial draft to existing HF Spaces project with all libs dependencies

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ OPENAI_API_KEY=sk-...
 # Anthropic
 ANTHROPIC_API_KEY=sk-ant-...
 
-# LangSmith
+# LangSmith (Observability - get key from https://smith.langchain.com)
+# Note: Variable name is LANGCHAIN_API_KEY but it's for LangSmith service
 LANGCHAIN_TRACING_V2=true
-LANGCHAIN_API_KEY=ls__...
+LANGCHAIN_API_KEY=ls__...  # Your LangSmith API key
 LANGCHAIN_PROJECT=call-center-assistant
