--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,11 @@ streamlit-flow-component>=1.6.0
 httpx>=0.27.0
 tenacity>=8.2.0
 redis>=5.0.0
+
+# ===================
+# Development & Testing
+# ===================
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.11.0
+pytest-cov>=4.1.0
